test/asm/long-format-spec.err
warning: long-format-spec.asm(3): [-Wlong-string]
    Format spec too long, got truncated
error: long-format-spec.asm(3):
    Invalid format spec '000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000009'
error: Assembly aborted (1 error)!
