test/asm/long-format-spec.asm
DEF n EQU 42
; the format spec is truncated to "000...009", omitting the "x", so this prints "000000042" not "00000002a"
PRINTLN "{000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000009x:n}"
